# letterboxd-cinema-graph

./: PROJECT_SPECS.md  README.md  pyproject.toml
phases/: phase-1-data-pipeline.md  phase-2-backend-api.md  phase-3-frontend-explorer.md  phase-4-ml-recommendations.md
scripts/pipeline/notebooks/: 01_explore_dataset.ipynb  02_clean_data.ipynb  03_validate_results.ipynb
