[project]
name = "letterboxd-cinema-graph"
version = "0.1.0"
description = "Interactive graph explorer for Letterboxd actor-movie relationships"
requires-python = ">=3.11"

dependencies = [
    "datasets>=2.14",
    "pandas>=2.0",
    "networkx>=3.0",
    "neo4j>=5.0",
    "python-dotenv>=1.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[project.optional-dependencies]
backend = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]
ml = [
    "node2vec>=0.4",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]
dev = [
    "ruff>=0.1",
]
